@@ -1,3 +1,8 @@
+2008-05-21 Sarka Todorova <sarka.todorova@cern.ch>
+	* fix simple partition 
+	* add color codes for the frame 
+	* tagged as MuonTrackingGeometry-00-03-12 
+
 2008-05-15 Sarka Todorova <sarka.todorova@cern.ch>
 	* fix TGC station identification
 	* tagged as MuonTrackingGeometry-00-03-11 
